# riktris2

./: .gitignore  CMakeLists.txt  README.md
data/misc/: configuration.cfg
data/sfx/: mod_to_mp3.sh
src/: globals.h  line_clear_animation.h  main.cpp  mino_grid.cpp  mino_grid.h  playfield.cpp  playfield.h  scene_manager.cpp  scene_manager.h  sound_manager.cpp  sound_manager.h  tetrimino.cpp  tetrimino.h  tetrimino_bag.cpp  tetrimino_bag.h  tetrimino_manager.cpp  tetrimino_manager.h  texture_manager.cpp  texture_manager.h  utils.cpp  utils.h
src/scenes/: game_scene.h  gameplay_scene.cpp  gameplay_scene.h
